--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server/index"
+    "dev": "nodemon server/index",
+    "start": "node server/index"
   },
   "keywords": [],
   "author": "",
